# ICS-Fusion

./: .gitignore  README.md  build.sh  isam_pic.patch  run_slambench.sh
3DSmoothNet/: CMakeLists.txt  README  ransac_demo.py  requirements.txt  run_3dsmoothnet.sh  run_ransac_demo_3dsmooth.sh
3DSmoothNet/python/: 3DSmoothNet.py  main_cnn.py
3DSmoothNet/python/core/: network.py
3DSmoothNet/src/: 3DSmoothNet.py  LrfWrapper.py  main_cnn.py  rand_keypts.py  smoothnetcore.cpp  smoothnetcore.h
3DSmoothNet/src/core/: config.py
3DSmoothNet/src/cpp/: lrfTypes.h  smoothnet.h  smoothnetcore.cpp  smoothnetcore.h  smoothnetinterf.cpp  smoothnetinterf.h
Algorithm/: CMakeLists.txt  dependencies
Algorithm/src/: Isam.cpp  Isam.h  PoseGraph.h  SiftCovEstimator.cpp  SiftCovEstimator.h  closeloop.cpp  closeloop.h  constant_parameters.h  cutil_math.h  defs.h  device_code.h  featuredetector.cpp  featuredetector.h  featurs.h  featursDescriptor.h  g2oGraph.cpp  g2oGraph.h  harris.cpp  harris.h  icpCovariance.cpp  icpCovariance.h  icsFusion.h  icsfusion.cu  image.h  kernels.cu  kernels.h  kernelscalls.cu  kernelscalls.h  keyptsmap.cpp  keyptsmap.h  kparams.h  marching_cube.h  sMatrix.h  saveData.cpp  saveData.h  smoothnet.cpp  smoothnet.h  smoothnetcore.cpp  smoothnetcore.h  utils.cpp  (+4 more)
Algorithm/src/old/: match3d.cu  match3d.h
Algorithm/src/sift/: CovEstArgumentEvaluator.cpp  CovEstArgumentEvaluator.h  CovEstimator.cpp  CovEstimator.h  GeneralFeature.cpp  GeneralFeature.h  ImagePyramid.cpp  ImagePyramid.h  covUtils.cpp  covUtils.h  covUtils.vcproj  definitions.h  imgfeatures.cpp  ipoint.cpp  ipoint.h  main.cpp  sift.cpp  sift.h  sift_cov.cpp  sift_cov.h  utils.cpp  utils.h
Algorithm/src/teaser/: matcher.h
ROS/: CMakeLists.txt  README  REDME  package.xml
ROS/config/: slam_params.yaml
ROS/depth_noise/launch/: depth_noise.launch  depth_rgb_sync.launch  tf_to_path.launch
ROS/depth_noise/src/: depth_noise.py  hz.py  image_converter.py
ROS/depth_rgb_sync/: package.xml
ROS/depth_rgb_sync/launch/: image_depth_sync.launch
ROS/depth_rgb_sync/src/: depth_rgb_sync_node.cpp  depth_rgb_sync_utils.cpp
ROS/detect_blur/: CMakeLists.txt  package.xml  setup.py
ROS/detect_blur/launch/: detect_blur.launch
ROS/detect_blur/src/: detect_blur.py
ROS/ics_fusion/: Algorithm  CMakeLists.txt  ics_fusion.rviz  ics_fusion_bag.rviz  package.xml
ROS/ics_fusion/config/: ics_fusion_gazebo.rviz  ics_fusion_tum.rviz  slam_params.yaml
ROS/ics_fusion/launch/: ics_fusion.launch  ics_fusion_bag.launch  ics_fusion_fox.launch  ics_fusion_gazebo.launch  ics_fusion_realsense.launch  ics_fusion_test.launch  ics_fusion_tum.launch  ics_fusion_vipgpu.launch  ite_fusion_tum.launch
ROS/ics_fusion/src/: ics_fusion_node.cpp
ROS/kfusion_gazebo/: CMakeLists.txt  REDME  package.xml
ROS/kfusion_gazebo/config/: kfusion_gazebo.rviz
ROS/kfusion_gazebo/launch/: kfusion_gazebo.launch  rec_gazebo.sh
ROS/kfusion_gazebo/scripts/: rec_gazebo.sh
ROS/kfusion_gazebo/urdf/: asus_xtion_pro.urdf.xacro  hexagons.urdf.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro
ROS/kfusion_gazebo/urdf/kobuki/: kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro
ROS/kfusion_gazebo/urdf/turtlebot/: turtlebot_common_library.urdf.xacro
ROS/kfusion_gazebo/worlds/: w2.world
ROS/launch/: ics_fusion.launch  ite_fusion.launch  ite_fusion_ros_serow.launch
ROS/smoothnet_3d/: CMakeLists.txt  package.xml  setup.py
ROS/smoothnet_3d/action/: SmoothNet3d.action
ROS/smoothnet_3d/launch/: file_keypts.launch  rand_keypts.launch  smoothnet_3d.launch  test_registration.launch
ROS/smoothnet_3d/src/: 3DSmoothNet  LrfWrapper.py  file_keypts_node.py  rand_keypts_node.py  smoothnet_3d_server.py  test_registration_node.py
ROS/src/: butterworthLPF.cpp  ics_fusion_node.cpp  image_process.cpp  image_process.h  ite_fusion_node.cpp
ROS/tf_to_path/launch/: gt_to_path_gazebo.launch  tf_to_path_gazebo.launch
ROS/tf_to_path/src/: gt_to_path.py  rotations.py  tf_to_path.py
Slambench2_benchmark/: CMakeLists.txt
Slambench2_benchmark/src/: CMakeLists.txt  icsFusion_library.cpp
Slambench2_patch/: README  gt.patch
graph_viz/: CMakeLists.txt  package.xml
graph_viz/config/: show_all.rviz
graph_viz/launch/: g2o.launch  graph_viz_all.launch  isam.launch  kfusion_viz.launch  test.launch
graph_viz/src/: ground_truth.py  isam_from_graph.py  isam_from_graph_opt.py  isam_from_kfusion.py  isam_poses.py  kfusion_viz.py  poses_from_files.py  publish_poses.py  rotations.py  utils.py
isamTest/: Algorithm  CMakeLists.txt  main.cpp
isamTestSimple/: CMakeLists.txt  main_simple.cpp
matlab/: calc_cov.m  corresp.m  corresp2.m  demo_icp.m  demo_icp2.m  demo_icp3.m  demo_icp_narf.m  icp.m  keypts_pca.m  match.m  show_keypts.m  show_keypts2.m  show_keypts_narf.m  tsdf2mesh.m  voxel.m
python/: data  test_pose.py
scripts/: run_isc_fusion.sh
