<?xml version="1.0"?>
<package>
    <name>detect_blur</name>
    <version>0.0.1</version>
    <description>The nao quibullet simulatior package</description>


    <maintainer email="tavu@todo.todo">tavu</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>std_msgs</build_depend>actionlib_msgs
<!--     <build_depend>actionlib_msgs</build_depend> -->
    
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>

<!--     <run_depend>message_generation</run_depend> -->
<!--     <run_depend>actionlib_msgs</run_depend> -->
    
    
    <export>
    </export>
</package>
